# rustgrpc-cosmos-delegations

./: Cargo.toml  README.md
output/: validator_delegations_jul_5.csv
src/: main.rs  tests.rs
